# sanic-scaffold

./: .gitignore  CONTRIBUTING.md  LICENSE  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  settings.py  setup.py
.github/workflows/: codeql-analysis.yml  pytest-cov.yml
controllers/: health.py
exceptions/: __init__.py  example.py
rabbitmq/: listener.py
rabbitmq/consumers/: __init__.py
rabbitmq/messages/: __init__.py
services/: health.py
tests/: test.json  test_autodiscovery.py  test_health.py  test_settings.py
tests/test_blueprint/: testbp.py
utils/: autodiscovery.py
